Release 0.3.0:
- add Ocf.Wrapper.bool and Ocf.bool to create options with boolean values
- add Ocf.Wrapper.string_map and Ocf.string_map to create options
  whose values are map from string to 'a.
- distinguish open an closed groups (groups and options can only be
  added to open groups)
- add Ocf.as_group to convert an option to a (closed) group
- to_json wrapper functions now have a ?with_doc: bool parameter
- new [@ocf.doc] attribute for record fields to that the wrapper
  generated by ppx extension dump documentation string if with_doc=true

Release 0.2.0:
- (ppx) fix: do not build empty value declarations
- add Ocf.set
- add Ocf.Wrapper.of_ok_error